# Breakout3D

./: CMakeLists.txt  README.md
data/glsl/: fragment.glsl  phong_crack_texture_fragment.glsl  phong_fragment.glsl  phong_texture_floor_fragment.glsl  phong_texture_fragment.glsl  phong_vertex.glsl  shadow_map_depth_fragment.glsl  shadow_map_depth_vertex.glsl  text_fragment.glsl  text_vertex.glsl  vertex.glsl
src/: main.cpp
src/core/: errors.h  types.h
src/game/: app.cpp  app.h  box.h  brick.cpp  brick.h  level.cpp  level.h  lives.cpp  lives.h  paddle.cpp  paddle.h  powerUp.cpp  powerUp.h  resourceManager.cpp  resourceManager.h  score.cpp  score.h  sphere.cpp  sphere.h
src/math/: functions.h  matrix.cpp  matrix.h  vector.cpp  vector.h
src/physics/: collider.h  physicsManager.cpp  physicsManager.h
src/renderer/: font.cpp  font.h  material.cpp  material.h  renderer.cpp  renderer.h  shaderProgram.cpp  shaderProgram.h  texture.cpp  texture.h
src/scene/: camera.cpp  camera.h  gameObject.cpp  gameObject.h  light.cpp  light.h  mesh.cpp  mesh.h  transform.h
src/window/: framebuffer.cpp  framebuffer.h  input.cpp  input.h  window.cpp  window.h
